Issue #313 increased spacing between browse sections

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -1573,6 +1573,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   padding-bottom: 6em;
+  margin-top: 2em;
 }
 #block-informea-frontpage-regions-and-parties .block-title {
   -webkit-box-shadow: 0px 0px 7px 1px #ffffff;
