--- a/docroot/sites/all/themes/informea.theme/less/pages/front.less
+++ b/docroot/sites/all/themes/informea.theme/less/pages/front.less
@@ -80,6 +80,7 @@
   justify-content: center;
   min-height: 15em;
   padding-bottom: 6em;
+  margin-top: 2em;
   .block-title {
     background-color: #fff;
     box-shadow: 0px 0px 7px 1px #ffffff;
